# arm_isa_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  ETL数据流.txt  README.md  docker-compose.yml  etl_output.txt  pyproject.toml  test_output.txt  verify_sqlite.py  前端实现规划_v2.md  前端实现规划_v3.md  对话查询数据流.txt  总体架构图.txt  模块划分与职责.md  目录结构.txt  规则生成模式_重设计方案.md
ISA_A64_xml_A_profile-2025-03/: ISA_A64_xml_A_profile-2025-03_relnote.html
data/cards/: ABS.md  ABS_advsimd.md  ADC.md  ADCS.md  ADDG.md  ADDHN_advsimd.md  ADDPT.md  ADDP_advsimd_pair.md  ADDP_advsimd_vec.md  ADDS_addsub_ext.md  ADDS_addsub_imm.md  ADDS_addsub_shift.md  ADDV_advsimd.md  ADD_addsub_ext.md  ADD_addsub_imm.md  ADD_addsub_shift.md  ADD_advsimd.md  ADR.md  ADRP.md  AESD_advsimd.md  AESE_advsimd.md  AESIMC_advsimd.md  AESMC_advsimd.md  ANDS_log_imm.md  ANDS_log_shift.md  AND_advsimd.md  AND_log_imm.md  AND_log_shift.md  APAS_SYS.md  ASRV.md  ASR_ASRV.md  ASR_SBFM.md  AT_SYS.md  AUTDA.md  AUTDB.md  AUTIA.md  AUTIA171615.md  AUTIASPPCR.md  AUTIASPPC_imm.md  AUTIB.md  (+2222 more)
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
scripts/: _test_rag.py  run_etl.py  test_constraint_extract.py  verify_constraints.py
src/arm_isa_agent/: __init__.py
src/arm_isa_agent/agent/: __init__.py  graph.py  prompt_manager.py  state.py  tool_registry.py
src/arm_isa_agent/api/: __init__.py  app.py  deps.py  schemas.py
src/arm_isa_agent/assembly/: __init__.py  instantiator.py  scenario.py  single_suite.py
src/arm_isa_agent/cli/: main.py
src/arm_isa_agent/compile/: __init__.py  verifier.py
tests/: conftest.py  test_instruction_classification.py  test_scenario_program.py  test_verification_graph.py  verify_phase8.py  verify_reviewer.py  verify_testgen.py
tests/unit/: test_instruction_card.py  test_xml_parser.py
(+83 files in other folders)
